Fix input overflow

--- a/css/base.css
+++ b/css/base.css
@@ -60,6 +60,10 @@ input[type="radio"], input[type="checkbox"] {
   height: 1rem;
   width: 1rem;
 }
+input[type="text"] {
+  max-width: 100%;
+  width: 100%;
+}
 input::placeholder, 
 textarea::placeholder {
   color: var(--input-placeholder-text-color);
